# dracul4

./: CMakeLists.txt  README.md  finaleprova.cpp
eseguibile/: cmake_install.cmake
poseidone/: provao1.xlsx
poseidone/zues_x01/: CMakeLists.txt
poseidone/zues_x01/eseguibile/: CMakeCache.txt  Makefile
scripts/: linux-build.sh  windows-build.ps1
